@@ -51,30 +51,6 @@ abstract class ResourceLoaderModule {
 	}
 
 	/**
-	 * The maximum number of seconds to cache this module for in the
-	 * client-side (browser) cache. Override this only if you have a good
-	 * reason not to use $wgResourceLoaderClientMaxage.
-	 *
-	 * @return Integer: cache maxage in seconds
-	 */
-	public function getClientMaxage() {
-		global $wgResourceLoaderClientMaxage;
-		return $wgResourceLoaderClientMaxage;
-	}
-
-	/**
-	 * The maximum number of seconds to cache this module for in the
-	 * server-side (Squid / proxy) cache. Override this only if you have a
-	 * good reason not to use $wgResourceLoaderServerMaxage.
-	 *
-	 * @return Integer: cache maxage in seconds
-	 */
-	public function getServerMaxage() {
-		global $wgResourceLoaderServerMaxage;
-		return $wgResourceLoaderServerMaxage;
-	}
-
-	/**
 	 * Get whether CSS for this module should be flipped
 	 */
 	public function getFlip( $context ) {
@@ -1011,14 +987,6 @@ class ResourceLoaderStartUpModule extends ResourceLoaderModule {
 		// before making changes to this code!
 		$this->modifiedTime[$hash] = ResourceLoader::getHighestModifiedTime( $context );
 		return $this->modifiedTime[$hash];
-	}
-
-	public function getClientMaxage() {
-		return 300; // 5 minutes
-	}
-
-	public function getServerMaxage() {
-		return 300; // 5 minutes
 	}
 
 	public function getFlip( $context ) {
